--- a/css/full-slider.css
+++ b/css/full-slider.css
@@ -34,3 +34,14 @@ body {
 footer {
     margin: 50px 0;
 }
+.hover-slide {
+    position: absolute;
+    /*margin-left: 30%;*/
+    z-index: 1;
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+.mygtuks {
+        margin-bottom: 30px;
+}
